<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".EmailActivity">

    <TextView
        android:id="@+id/text_view_email_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subject" />

    <EditText
        android:id="@+id/edit_text_email_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject" />

    <TextView
        android:id="@+id/text_view_email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message" />

    <EditText
        android:id="@+id/edit_text_email_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|top"
        android:lines="10" />

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />


</LinearLayout>