<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".profile.ProfileActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!-- USER DATA CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/default_large_margin">

            <!-- FIREBASE IMAGE -->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/parking"/>

            <!-- PROGRESS BAR -->
            <ProgressBar
                android:id="@+id/profile_activity_progress_bar"
                android:layout_width="30dip"
                android:layout_height="30dip"
                android:visibility="invisible"
                android:layout_margin="@dimen/default_large_margin"/>

            <!-- PROFILE IMAGE -->
            <ImageView
                android:id="@+id/profile_activity_imageview_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_anon_user_48dp"/>

        </LinearLayout>


        <!-- PROFILE USERNAME -->
        <android.support.design.widget.TextInputEditText
            android:id="@+id/profile_activity_edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:text="@string/text_input_username"
            android:layout_margin="@dimen/default_margin"/>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/text_view_email"
                android:textSize="@dimen/default_text_size"
                android:textStyle="bold" />

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/profile_activity_text_view_email"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:paddingLeft="@dimen/default_margin"
                android:textSize="@dimen/default_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_plate" />

            <EditText
                android:id="@+id/edit_text_immatriculation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </LinearLayout>

    </LinearLayout>

    <!-- BUTTONS CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_immatriculation"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_sandlight_color"
            android:padding="@dimen/default_margin"
            android:text="@string/scan_immatriculation"
            android:textColor="@android:color/white"
            android:textSize="@dimen/default_text_size"/>

        <!-- BUTTON UPDATE USERNAME -->
        <Button
            android:id="@+id/profile_activity_button_update"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_primary_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_update_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON SIGN OUT -->
        <Button
            android:id="@+id/profile_activity_button_sign_out"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_accent_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_sign_out_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

        <!-- BUTTON DELETE ACCOUNT -->
        <Button
            android:id="@+id/profile_activity_button_delete"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@drawable/button_radius_error_color"
            android:padding="@dimen/default_margin"
            android:text="@string/button_delete_account"
            android:textColor="#fff"
            android:textSize="@dimen/default_text_size" />

    </LinearLayout>

</LinearLayout>