<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/edit_reservation_start_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/reservation_start_date"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                />

            <EditText
                android:id="@+id/edit_reservation_end_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/reservation_end_date"
                android:layout_weight="1"
                android:focusableInTouchMode="false"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/default_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservation_duration"/>
            <TextView
                android:id="@+id/text_view_duree_reservation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" 0 heure(s), 0 minute(s)"
                />
        </LinearLayout>



    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_check_white_24dp" />

</android.support.design.widget.CoordinatorLayout>